Corrections in the layout.
The format of the over section is changed, leaving it to two columns and the misalignment of the "Request service" button on the PriceList apartment is corrected.

--- a/css/styles.css
+++ b/css/styles.css
@@ -322,6 +322,11 @@ h2::after {
 
 /* Service Card */
 .service-card {
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 350px;
+    max-height: auto;
     background-color: var(--color-neutral);
     border: 2px solid var(--color-primary);
     border-radius: var(--border-radius);
@@ -405,7 +410,7 @@ h2::after {
     cursor: pointer;
     transition: all 0.3s ease;
     width: 100%;
-    margin-top: var(--spacing-medium);
+    margin-top: auto;
 }
 
 .service-button:hover {
